<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lists"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewATW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewAllTooWell"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/alltoowell" />

            <TextView
                android:id="@+id/txtViewAllTooWell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/all_too_well_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toEndOf="@+id/imgViewAllTooWell"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewCS"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cruelsummer" />

            <TextView
                android:id="@+id/txtViewCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/cruel_summer_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2CS"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toEndOf="@+id/imgViewCS"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageView2CS"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDBM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewDBM"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dontblame" />

            <TextView
                android:id="@+id/txtViewDBM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dont_blame_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2DBM"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toEndOf="@+id/imgViewDBM"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageView2DBM"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewE"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/enchanted" />

            <TextView
                android:id="@+id/txtViewE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/enchanted_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2E"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toEndOf="@+id/imgViewE"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageView2E"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="575dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewG"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gorgeous" />

            <TextView
                android:id="@+id/txtViewG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/gorgeous_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2G"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toEndOf="@+id/imgViewG"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageView2G"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMNR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        app:cardBackgroundColor="@color/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewMNR"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/midnight" />

            <TextView
                android:id="@+id/txtViewMNR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/midnight_rain_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewMNR"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgViewMNR"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511" />

            <ImageView
                android:id="@+id/imageViewMNR"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>